2024-04-17T08:14:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8718540256 # 190
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-17
* notice: last 14d: unq all: 3 1324
* notice: prev accum: outdated-unq outdated-all / unq all: 1996 198627 / 2014 199859
* notice: next accum: outdated-unq outdated-all / unq all: 1996 198627 / 2016 199970
* notice: prev exec diff / last date diff / accum: unq all: +2 +111 -0 -18 / +2 +111 -0 -0 / 2 111
* notice: removed / changed dates: [] / [2024-04-03 2024-04-17]

2024-04-17T00:52:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8714572348 # 189
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-17
* notice: last 14d: unq all: 3 1231
* notice: prev accum: outdated-unq outdated-all / unq all: 1995 198577 / 2014 199767
* notice: next accum: outdated-unq outdated-all / unq all: 1996 198627 / 2014 199859
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -1 / +2 +297 -0 -0 / 2 297
* notice: removed / changed dates: [2024-04-02] / [2024-04-03 2024-04-16]

2024-04-16T16:14:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8708996251 # 188
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-16
* notice: last 14d: unq all: 3 1154
* notice: prev accum: outdated-unq outdated-all / unq all: 1995 198577 / 2014 199675
* notice: next accum: outdated-unq outdated-all / unq all: 1995 198577 / 2014 199767
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -17 / +2 +205 -0 -0 / 2 205
* notice: removed / changed dates: [] / [2024-04-02 2024-04-16]

2024-04-16T08:14:23Z: