@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-04-17T08:14:22Z",
+  "timestamp" : "2024-04-17T16:14:57Z",
   "count_outdated" : 198627,
   "uniques_outdated" : 1996,
-  "count" : 199970,
-  "uniques" : 2016,
+  "count" : 200062,
+  "uniques" : 2017,
   "clones" : [
     {
       "timestamp": "2024-04-03T00:00:00Z",
-      "count": 31,
-      "count_minmax": [ 31, 50 ],
-      "count_decinc": [ 19, 50 ],
+      "count": 14,
+      "count_minmax": [ 14, 50 ],
+      "count_decinc": [ 36, 50 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,12 +133,12 @@
     },
     {
       "timestamp": "2024-04-17T00:00:00Z",
-      "count": 111,
-      "count_minmax": [ 111, 111 ],
-      "count_decinc": [ 0, 111 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 203,
+      "count_minmax": [ 111, 203 ],
+      "count_decinc": [ 0, 203 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
